# citation-graph

./: .gitignore  CHANGELOG.md  LICENSE  README.md  apis.txt  config.example.ini  pyproject.toml  run.bat  run.sh  sample1.py
src/citation_graph/: __init__.py  __main__.py  cache_manager.py  caching.py  citation_graph.py  crossref.py  database.py  paper.py  restful_database.py  semantic_scholar.py  static.py  traverser.py  utils.py
src/python_template/: __init__.py  __main__.py  python_template.py
tests/: test_database.py  test_paper.py  utils.py
