[tool.poetry]
name = "citation_graph"
version = "1.2.2"
description = ""
authors = ["miile7"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
crossrefapi = "^1.5.0"
requests = "^2.28.1"
types-requests = "^2.28.11.5"
pyvis = "^0.3.1"
networkx = "^2.8.8"
levenshtein = "^0.20.8"

[tool.poetry.group.dev.dependencies]
black = "*"
mypy = "*"
flake8 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
