[tool.poetry]
name = "citation_graph"
version = "1.2.7"
description = "Create a citation graph starting from a root paper"
authors = ["miile7"]
readme = "README.md"
homepage = "https://github.com/miile7/citation-graph"

[tool.poetry.dependencies]
python = "^3.8"
crossrefapi = "^1.5.0"
requests = "^2.28.1"
types-requests = "^2.28.11.5"
pyvis = "^0.3.1"
networkx = "^2.8.8"
levenshtein = "^0.20.8"
unidecode = "^1.3.6"

[tool.poetry.group.dev.dependencies]
black = "*"
mypy = "*"
flake8 = "*"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
